--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -5,19 +5,16 @@ import type {
   InferGetStaticPropsType,
 } from 'astro';
 import { getCollection } from 'astro:content';
+import Sidebar from './components/Sidebar.astro';
+import TableOfContents from './components/TableOfContents.astro';
+import { generateToC } from './components/TableOfContents/generateToC';
+import { slugToParam } from './utils/slugs';
 
 export async function getStaticPaths() {
   const docs = await getCollection('docs');
 
-  const handleIndexSlugs = (slug: string) =>
-    slug === 'index'
-      ? undefined
-      : slug.endsWith('/index')
-      ? slug.replace('/index', '')
-      : slug;
-
   return docs.map((doc) => ({
-    params: { slug: handleIndexSlugs(doc.slug) },
+    params: { slug: slugToParam(doc.slug) },
     props: doc,
   })) satisfies GetStaticPathsResult;
 }
@@ -26,7 +23,7 @@ type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { render, data } = Astro.props;
-const { Content } = await render();
+const { Content, headings } = await render();
 ---
 
 <html>
@@ -36,11 +33,43 @@ const { Content } = await render();
     <meta name="generator" content={Astro.generator} />
 
     <title>{data.title}</title>
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/papercss@1.9.1/dist/paper.min.css"
+    />
   </head>
   <body>
-    <main>
-      <h1>{data.title}</h1>
-      <Content />
-    </main>
+    <div class="wrapper">
+      <Sidebar />
+      <main id="overview">
+        <div class="content">
+          <h1>{data.title}</h1>
+          <Content />
+        </div>
+        <aside>
+          <h2>On this page</h2>
+          <TableOfContents toc={generateToC(headings)} />
+        </aside>
+      </main>
+    </div>
+
+    <style>
+      .wrapper {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 4rem;
+      }
+      main {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 4rem;
+      }
+
+      .content {
+        max-width: 65ch;
+        margin-inline: auto;
+      }
+    </style>
   </body>
 </html>
