--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -45,7 +45,7 @@ const { Content, headings } = await render();
     <div class="wrapper">
       <Sidebar />
       <main id="overview">
-        <div class="content">
+        <div class="content" data-pagefind-body>
           <h1>{data.title}</h1>
           <Content />
         </div>
