--- a/packages/starbook/components/SidebarSublist.astro
+++ b/packages/starbook/components/SidebarSublist.astro
@@ -10,7 +10,7 @@ interface Props {
   {
     Astro.props.sublist.map((entry) => (
       <li>
-        {entry.type === 'page' ? (
+        {entry.type === 'link' ? (
           <a href={entry.href} aria-current={entry.isCurrent && 'true'}>{entry.label}</a>
         ) : (
           <strong>{entry.label}</strong>
