Make sidebar `aria-current` styling more obvious for testing

--- a/packages/starbook/components/SidebarSublist.astro
+++ b/packages/starbook/components/SidebarSublist.astro
@@ -29,6 +29,6 @@ interface Props {
     text-transform: uppercase;
   }
   [aria-current="true"] {
-    color: #00f;
+    background-color: rgb(211, 241, 255);
   }
 </style>
