--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -47,7 +47,7 @@ const dir = slugToDir(slug);
   <body>
     <Header locale={locale} />
     <div class="wrapper">
-      <Sidebar currentSlug={slug} />
+      <Sidebar locale={locale} />
       <main id="overview">
         <div class="content" data-pagefind-body>
           <h1>{data.title}</h1>
