--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -15,6 +15,8 @@ import {
 import HeadSEO from './components/HeadSEO.astro';
 import LastUpdated from './components/LastUpdated.astro';
 import EditLink from './components/EditLink.astro';
+import { getPrevNextLinks, getSidebar } from './utils/navigation';
+import PrevNextLinks from './components/PrevNextLinks.astro';
 
 export async function getStaticPaths() {
   const docs = await getCollection('docs');
@@ -32,6 +34,8 @@ const { Content, headings } = await render();
 const lang = slugToLang(slug);
 const locale = slugToLocale(slug);
 const dir = slugToDir(slug);
+const sidebar = getSidebar(Astro.url.pathname, locale);
+const prevNextLinks = getPrevNextLinks(sidebar);
 ---
 
 <html lang={lang} dir={dir}>
@@ -47,12 +51,13 @@ const dir = slugToDir(slug);
   <body>
     <Header locale={locale} />
     <div class="wrapper">
-      <Sidebar locale={locale} />
+      <Sidebar sidebar={sidebar} />
       <main id="overview">
         <div class="content" data-pagefind-body>
           <h1>{data.title}</h1>
           <Content />
           <footer>
+            <PrevNextLinks {...prevNextLinks} />
             <LastUpdated id={id} lang={lang} />
           </footer>
         </div>
