--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -18,6 +18,8 @@ import EditLink from './components/EditLink.astro';
 import { getPrevNextLinks, getSidebar } from './utils/navigation';
 import PrevNextLinks from './components/PrevNextLinks.astro';
 
+import 'virtual:starbook/user-css';
+
 export async function getStaticPaths() {
   const docs = await getCollection('docs');
 
