DX-23: Initial theme variables based on designs

--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -18,6 +18,7 @@ import EditLink from './components/EditLink.astro';
 import { getPrevNextLinks, getSidebar } from './utils/navigation';
 import PrevNextLinks from './components/PrevNextLinks.astro';
 
+import './style/props.css';
 import 'virtual:starbook/user-css';
 
 export async function getStaticPaths() {
