--- a/packages/starbook/style/props.css
+++ b/packages/starbook/style/props.css
@@ -1,35 +1,61 @@
 :root {
   /* Colors (dark mode) */
-  --sb-color-black: hsl(223, 13%, 10%);
+  --sb-color-white: hsl(0, 0%, 100%); /* “white” */
   --sb-color-gray-1: hsl(231, 23%, 94%);
   --sb-color-gray-2: hsl(228, 8%, 77%);
   --sb-color-gray-3: hsl(221, 8%, 56%);
   --sb-color-gray-4: hsl(225, 9%, 36%);
   --sb-color-gray-5: hsl(222, 11%, 23%);
   --sb-color-gray-6: hsl(222, 13%, 16%);
-  --sb-color-white: hsl(0, 0%, 100%);
+  --sb-color-black: hsl(223, 13%, 10%);
 
-  --sb-hue-accent: 234;
+  --sb-hue-orange: 41;
+  --sb-color-orange-dark: hsl(var(--sb-hue-orange), 39%, 22%);
+  --sb-color-orange: hsl(var(--sb-hue-orange), 82%, 63%);
+  --sb-color-orange-light: hsl(var(--sb-hue-orange), 82%, 87%);
+  --sb-hue-green: 101;
+  --sb-color-green-dark: hsl(var(--sb-hue-green), 39%, 22%);
+  --sb-color-green: hsl(var(--sb-hue-green), 82%, 63%);
+  --sb-color-green-light: hsl(var(--sb-hue-green), 82%, 87%);
+  --sb-hue-blue: 234;
+  --sb-color-blue-dark: hsl(var(--sb-hue-blue), 54%, 20%);
+  --sb-color-blue: hsl(var(--sb-hue-blue), 100%, 60%);
+  --sb-color-blue-light: hsl(var(--sb-hue-blue), 100%, 87%);
+  --sb-hue-purple: 281;
+  --sb-color-purple-dark: hsl(var(--sb-hue-purple), 39%, 22%);
+  --sb-color-purple: hsl(var(--sb-hue-purple), 82%, 63%);
+  --sb-color-purple-light: hsl(var(--sb-hue-purple), 82%, 89%);
+  --sb-hue-red: 339;
+  --sb-color-red-dark: hsl(var(--sb-hue-red), 39%, 22%);
+  --sb-color-red: hsl(var(--sb-hue-red), 82%, 63%);
+  --sb-color-red-light: hsl(var(--sb-hue-red), 82%, 87%);
+
+  --sb-hue-accent: var(--sb-hue-blue);
   --sb-color-accent-dark: hsl(var(--sb-hue-accent), 54%, 20%);
   --sb-color-accent: hsl(var(--sb-hue-accent), 100%, 60%);
   --sb-color-accent-light: hsl(var(--sb-hue-accent), 100%, 87%);
 
-  --sb-hue-status-red: 339;
-  --sb-color-status-red-dark: hsl(var(--sb-hue-status-red), 39%, 22%);
-  --sb-color-status-red: hsl(var(--sb-hue-status-red), 82%, 63%);
-  --sb-color-status-red-light: hsl(var(--sb-hue-status-red), 82%, 87%);
-  --sb-hue-status-purple: 281;
-  --sb-color-status-purple-dark: hsl(var(--sb-hue-status-purple), 39%, 22%);
-  --sb-color-status-purple: hsl(var(--sb-hue-status-purple), 82%, 63%);
-  --sb-color-status-purple-light: hsl(var(--sb-hue-status-purple), 82%, 89%);
-  --sb-hue-status-orange: 41;
-  --sb-color-status-orange-dark: hsl(var(--sb-hue-status-orange), 39%, 22%);
-  --sb-color-status-orange: hsl(var(--sb-hue-status-orange), 82%, 63%);
-  --sb-color-status-orange-light: hsl(var(--sb-hue-status-orange), 82%, 87%);
-  --sb-hue-status-green: 101;
-  --sb-color-status-green-dark: hsl(var(--sb-hue-status-green), 39%, 22%);
-  --sb-color-status-green: hsl(var(--sb-hue-status-green), 82%, 63%);
-  --sb-color-status-green-light: hsl(var(--sb-hue-status-green), 82%, 87%);
+  /* Gradients (dark mode) */
+  --sb-gradient-blue-purple: linear-gradient(
+    to bottom,
+    hsl(234, 100%, 59.8%) 0%,
+    hsl(281, 82.1%, 62.7%) 100%
+  );
+  --sb-gradient-red-pink: linear-gradient(
+    to bottom,
+    hsl(0, 67.9%, 52.4%) 0%,
+    hsl(295, 100%, 62.7%) 100%
+  );
+  --sb-gradient-orange-yellow: linear-gradient(
+    to bottom,
+    hsl(54, 93.5%, 57.6%) 0%,
+    hsl(14, 100%, 66.5%) 100%
+  );
+  --sb-gradient-blue-green: linear-gradient(
+    to bottom,
+    hsl(165, 86.6%, 62%) 0%,
+    hsl(227, 58.4%, 44.3%) 100%
+  );
 
   /* Shadows (dark mode) */
   --sb-shadow-sm: 0px 1px 1px hsla(0, 0%, 0%, 0.12),
@@ -63,6 +89,12 @@
 
   --sb-line-height: 1.8;
   --sb-line-height--headings: 1.2;
+
+  --sb-font-system: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --sb-font-system-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    'Liberation Mono', 'Courier New', monospace;
 }
 
 :root[data-theme='light'] {
@@ -76,23 +108,47 @@
   --sb-color-gray-6: hsl(231, 23%, 94%);
   --sb-color-black: hsl(0, 0%, 100%);
 
+  --sb-color-orange-dark: hsl(var(--sb-hue-orange), 80%, 25%);
+  --sb-color-orange: hsl(var(--sb-hue-orange), 90%, 60%);
+  --sb-color-orange-light: hsl(var(--sb-hue-orange), 90%, 88%);
+  --sb-color-green-dark: hsl(var(--sb-hue-green), 80%, 22%);
+  --sb-color-green: hsl(var(--sb-hue-green), 90%, 60%);
+  --sb-color-green-light: hsl(var(--sb-hue-green), 85%, 90%);
+  --sb-color-blue-dark: hsl(var(--sb-hue-blue), 80%, 30%);
+  --sb-color-blue: hsl(var(--sb-hue-blue), 90%, 60%);
+  --sb-color-blue-light: hsl(var(--sb-hue-blue), 88%, 90%);
+  --sb-color-purple-dark: hsl(var(--sb-hue-purple), 39%, 30%);
+  --sb-color-purple: hsl(var(--sb-hue-purple), 90%, 60%);
+  --sb-color-purple-light: hsl(var(--sb-hue-purple), 80%, 90%);
+  --sb-color-red-dark: hsl(var(--sb-hue-red), 80%, 30%);
+  --sb-color-red: hsl(var(--sb-hue-red), 90%, 60%);
+  --sb-color-red-light: hsl(var(--sb-hue-red), 80%, 90%);
+
   --sb-color-accent-dark: hsl(var(--sb-hue-accent), 80%, 30%);
   --sb-color-accent: hsl(var(--sb-hue-accent), 90%, 60%);
   --sb-color-accent-light: hsl(var(--sb-hue-accent), 88%, 90%);
 
-  --sb-color-status-red-dark: hsl(var(--sb-hue-status-red), 80%, 30%);
-  --sb-color-status-red: hsl(var(--sb-hue-status-red), 90%, 60%);
-  --sb-color-status-red-light: hsl(var(--sb-hue-status-red), 80%, 90%);
-  --sb-hue-status-purple: 281;
-  --sb-color-status-purple-dark: hsl(var(--sb-hue-status-purple), 39%, 30%);
-  --sb-color-status-purple: hsl(var(--sb-hue-status-purple), 90%, 60%);
-  --sb-color-status-purple-light: hsl(var(--sb-hue-status-purple), 80%, 90%);
-  --sb-color-status-orange-dark: hsl(var(--sb-hue-status-orange), 80%, 25%);
-  --sb-color-status-orange: hsl(var(--sb-hue-status-orange), 90%, 60%);
-  --sb-color-status-orange-light: hsl(var(--sb-hue-status-orange), 90%, 88%);
-  --sb-color-status-green-dark: hsl(var(--sb-hue-status-green), 80%, 22%);
-  --sb-color-status-green: hsl(var(--sb-hue-status-green), 90%, 60%);
-  --sb-color-status-green-light: hsl(var(--sb-hue-status-green), 85%, 90%);
+  /* Gradients (light mode) */
+  --sb-gradient-blue-green: linear-gradient(
+    to bottom,
+    hsl(165, 86.6%, 62%) 0%,
+    hsl(227, 58.4%, 44.3%) 100%
+  );
+  --sb-gradient-orange-yellow: linear-gradient(
+    to bottom,
+    hsl(54, 93.5%, 57.6%) 0%,
+    hsl(14, 100%, 66.5%) 100%
+  );
+  --sb-gradient-red-pink: linear-gradient(
+    to bottom,
+    hsl(0, 67.9%, 52.4%) 0%,
+    hsl(295, 100%, 62.7%) 100%
+  );
+  --sb-gradient-blue-purple: linear-gradient(
+    to bottom,
+    hsl(234, 100%, 59.8%) 0%,
+    hsl(281, 82.1%, 62.7%) 100%
+  );
 
   /* Shadows (light mode) */
   --sb-shadow-sm: 0px 1px 1px hsla(0, 0%, 0%, 0.06),
