--- a/packages/starbook/style/props.css
+++ b/packages/starbook/style/props.css
@@ -35,7 +35,17 @@
   --sb-color-accent: hsl(var(--sb-hue-accent), 100%, 60%);
   --sb-color-accent-light: hsl(var(--sb-hue-accent), 100%, 87%);
 
-  /* Gradients (dark mode) */
+  /* Shadows (dark mode) */
+  --sb-shadow-sm: 0px 1px 1px hsla(0, 0%, 0%, 0.12),
+    0px 2px 1px hsla(0, 0%, 0%, 0.24);
+  --sb-shadow-md: 0px 8px 4px hsla(0, 0%, 0%, 0.08),
+    0px 5px 2px hsla(0, 0%, 0%, 0.08), 0px 3px 2px hsla(0, 0%, 0%, 0.12),
+    0px 1px 1px hsla(0, 0%, 0%, 0.15);
+  --sb-shadow-lg: 0px 25px 7px hsla(0, 0%, 0%, 0.03),
+    0px 16px 6px hsla(0, 0%, 0%, 0.1), 0px 9px 5px hsla(223, 13%, 10%, 0.33),
+    0px 4px 4px hsla(0, 0%, 0%, 0.75), 0px 4px 2px hsla(0, 0%, 0%, 0.25);
+
+  /* Gradients (unchanged across dark & light modes) */
   --sb-gradient-blue-purple: linear-gradient(
     to bottom,
     hsl(234, 100%, 59.8%) 0%,
@@ -56,16 +66,6 @@
     hsl(165, 86.6%, 62%) 0%,
     hsl(227, 58.4%, 44.3%) 100%
   );
-
-  /* Shadows (dark mode) */
-  --sb-shadow-sm: 0px 1px 1px hsla(0, 0%, 0%, 0.12),
-    0px 2px 1px hsla(0, 0%, 0%, 0.24);
-  --sb-shadow-md: 0px 8px 4px hsla(0, 0%, 0%, 0.08),
-    0px 5px 2px hsla(0, 0%, 0%, 0.08), 0px 3px 2px hsla(0, 0%, 0%, 0.12),
-    0px 1px 1px hsla(0, 0%, 0%, 0.15);
-  --sb-shadow-lg: 0px 25px 7px hsla(0, 0%, 0%, 0.03),
-    0px 16px 6px hsla(0, 0%, 0%, 0.1), 0px 9px 5px hsla(223, 13%, 10%, 0.33),
-    0px 4px 4px hsla(0, 0%, 0%, 0.75), 0px 4px 2px hsla(0, 0%, 0%, 0.25);
 
   /* Text size and line height */
   --sb-text-sm: 0.8125rem; /* 13px */
@@ -127,28 +127,6 @@
   --sb-color-accent-dark: hsl(var(--sb-hue-accent), 80%, 30%);
   --sb-color-accent: hsl(var(--sb-hue-accent), 90%, 60%);
   --sb-color-accent-light: hsl(var(--sb-hue-accent), 88%, 90%);
-
-  /* Gradients (light mode) */
-  --sb-gradient-blue-green: linear-gradient(
-    to bottom,
-    hsl(165, 86.6%, 62%) 0%,
-    hsl(227, 58.4%, 44.3%) 100%
-  );
-  --sb-gradient-orange-yellow: linear-gradient(
-    to bottom,
-    hsl(54, 93.5%, 57.6%) 0%,
-    hsl(14, 100%, 66.5%) 100%
-  );
-  --sb-gradient-red-pink: linear-gradient(
-    to bottom,
-    hsl(0, 67.9%, 52.4%) 0%,
-    hsl(295, 100%, 62.7%) 100%
-  );
-  --sb-gradient-blue-purple: linear-gradient(
-    to bottom,
-    hsl(234, 100%, 59.8%) 0%,
-    hsl(281, 82.1%, 62.7%) 100%
-  );
 
   /* Shadows (light mode) */
   --sb-shadow-sm: 0px 1px 1px hsla(0, 0%, 0%, 0.06),
