DX-23, DX-149: Initial CSS architecture (#12)

--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -18,6 +18,9 @@ import EditLink from './components/EditLink.astro';
 import { getPrevNextLinks, getSidebar } from './utils/navigation';
 import PrevNextLinks from './components/PrevNextLinks.astro';
 
+import './style/props.css';
+import 'virtual:starbook/user-css';
+
 export async function getStaticPaths() {
   const docs = await getCollection('docs');
 
@@ -43,10 +46,6 @@ const prevNextLinks = getPrevNextLinks(sidebar);
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <HeadSEO data={data} lang={lang} />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/papercss@1.9.1/dist/paper.min.css"
-    />
   </head>
   <body>
     <Header locale={locale} />
