Add basic reset & colour baseline

--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -19,6 +19,7 @@ import { getPrevNextLinks, getSidebar } from './utils/navigation';
 import PrevNextLinks from './components/PrevNextLinks.astro';
 
 import './style/props.css';
+import './style/reset.css';
 import 'virtual:starbook/user-css';
 
 export async function getStaticPaths() {
