--- a/packages/starbook/components/LanguageSelect.astro
+++ b/packages/starbook/components/LanguageSelect.astro
@@ -64,3 +64,11 @@ function localizedPathname(locale: string | undefined): string {
   }
   customElements.define('starbook-lang-select', StarBookLanguageSelect);
 </script>
+
+<style>
+  label {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+  }
+</style>
