--- a/packages/starbook/components/Sidebar.astro
+++ b/packages/starbook/components/Sidebar.astro
@@ -13,6 +13,9 @@ interface Props {
 
 <style>
   nav {
-    display: block;
+    height: 100%;
+    border-inline-end: 1px solid var(--sb-color-black);
+    background-color: var(--sb-color-gray-6);
+    padding: 1rem;
   }
 </style>
