--- a/packages/starbook/components/Search.astro
+++ b/packages/starbook/components/Search.astro
@@ -16,15 +16,22 @@ import '@pagefind/default-ui/css/ui.css';
 
 <style>
   .search-container {
+    --pagefind-ui-scale: 0.65;
+    --pagefind-ui-primary: var(--sb-color-accent-light);
+    --pagefind-ui-text: var(--sb-color-gray-2);
+    --pagefind-ui-background: var(--sb-color-gray-6);
+    --pagefind-ui-border: var(--sb-color-gray-5);
+
     position: relative;
-    width: 100%;
+    width: 50%;
+    height: 100%;
   }
   #search {
     position: absolute;
     top: 0;
     width: calc(100% - 1rem);
     max-width: 22rem;
-    background: white;
+    background: var(--sb-color-gray-6);
     padding: 0 0.5rem 0.5rem;
   }
 </style>
