--- a/packages/starbook/components/TableOfContents.astro
+++ b/packages/starbook/components/TableOfContents.astro
@@ -1,20 +1,11 @@
 ---
 import type { generateToC } from './TableOfContents/generateToC';
+import TableOfContentsSublist from './TableOfContentsSublist.astro';
 
 interface Props {
   toc: ReturnType<typeof generateToC>;
 }
-
-const { toc } = Astro.props;
 ---
 
-<ul>
-  {
-    toc.map((heading) => (
-      <li>
-        <a href={'#' + heading.slug}>{heading.text}</a>
-        {heading.children.length > 0 && <Astro.self toc={heading.children} />}
-      </li>
-    ))
-  }
-</ul>
+<h2>On this page</h2>
+<TableOfContentsSublist toc={Astro.props.toc} />
