--- a/packages/starbook/components/TableOfContents.astro
+++ b/packages/starbook/components/TableOfContents.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 ---
 
-<nav aria-labelledby="starbook--on-this-page">
-  <h2 id="starbook--on-this-page">On this page</h2>
+<nav aria-labelledby="starbook__on-this-page">
+  <h2 id="starbook__on-this-page">On this page</h2>
   <TableOfContentsSublist toc={Astro.props.toc} />
 </nav>
