--- a/packages/starbook/components/Layout.astro
+++ b/packages/starbook/components/Layout.astro
@@ -1,6 +1,17 @@
+---
+import MobileMenuToggle from './MobileMenuToggle.astro';
+---
+
 <div class="page">
   <header class="header"><slot name="header" /></header>
-  <aside class="sidebar"><slot name="sidebar" /></aside>
+  <nav class="sidebar" aria-label="Main">
+    <MobileMenuToggle />
+    <div id="starbook__sidebar" class="sidebar-pane">
+      <div class="sidebar-content">
+        <slot name="sidebar" />
+      </div>
+    </div>
+  </nav>
   <div class="main-frame">
     <div class="container">
       <aside class="right-sidebar-container">
@@ -19,59 +30,93 @@
   }
 
   .header {
+    --sb-header-pad-x: 1.5rem;
+    --sb-header-pad-y: 0.75rem;
+
     z-index: var(--sb-z-index-navbar);
     position: fixed;
     inset-inline-start: 0;
-    top: 0;
-    background-color: var(--sb-color-gray-6);
+    inset-block-start: 0;
     width: 100%;
-    border-bottom: 1px solid var(--sb-color-black);
-    padding: 0.75rem 1.5rem;
     height: var(--sb-nav-height);
+    border-bottom: 1px solid var(--sb-color-black);
+    padding: var(--sb-header-pad-y) var(--sb-header-pad-y);
+    padding-inline-end: calc(
+      var(--sb-header-pad-x) * 2 + var(--sb-menu-button-size)
+    );
+    background-color: var(--sb-color-gray-6);
   }
 
-  .sidebar {
+  .sidebar-pane {
+    visibility: var(--sb-sidebar-visibility, hidden);
     position: fixed;
     inset-block: 0;
     inset-inline-start: 0;
     padding-top: var(--sb-nav-height);
-    width: var(--sb-sidebar-width);
+    width: 100%;
+    background-color: var(--sb-color-black);
+  }
+
+  :global([aria-expanded='true']) ~ .sidebar-pane {
+    --sb-sidebar-visibility: visible;
+  }
+
+  .sidebar-content {
+    height: 100%;
+    overflow-y: auto;
   }
 
   .main-frame {
-    padding-inline-start: var(--sb-sidebar-width);
     padding-top: var(--sb-nav-height);
   }
 
-  .container {
-    display: flex;
+  @media (min-width: 50rem) {
+    .header {
+      padding-inline-end: var(--sb-header-pad-x);
+    }
+    .sidebar-pane {
+      --sb-sidebar-visibility: visible;
+      width: var(--sb-sidebar-width);
+      background-color: var(--sb-color-gray-6);
+      border-inline-end: 1px solid var(--sb-color-black);
+    }
+
+    .main-frame {
+      padding-inline-start: var(--sb-sidebar-width);
+    }
   }
 
-  .right-sidebar-container {
-    order: 2;
-    position: relative;
-    width: calc(
-      var(--sb-sidebar-width) +
-        (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
-    );
-  }
+  @media (min-width: 66.75rem) {
+    .container {
+      display: flex;
+    }
 
-  .right-sidebar {
-    position: fixed;
-    top: 0;
-    border-inline-start: 1px solid var(--sb-color-gray-6);
-    padding-top: var(--sb-nav-height);
-    width: 100%;
-    height: 100vh;
-    overflow-y: auto;
-    scrollbar-width: none;
-  }
+    .right-sidebar-container {
+      order: 2;
+      position: relative;
+      width: calc(
+        var(--sb-sidebar-width) +
+          (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
+      );
+    }
 
-  .main-pane {
-    order: 1;
-    width: calc(
-      var(--sb-content-width) +
-        (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
-    );
+    .right-sidebar {
+      position: fixed;
+      top: 0;
+      border-inline-start: 1px solid var(--sb-color-gray-6);
+      padding-top: var(--sb-nav-height);
+      width: 100%;
+      height: 100vh;
+      overflow-y: auto;
+      scrollbar-width: none;
+    }
+
+    .main-pane {
+      order: 1;
+      width: calc(
+        var(--sb-content-width) +
+          (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
+      );
+    }
   }
 </style>
