--- a/packages/starbook/components/Sidebar.astro
+++ b/packages/starbook/components/Sidebar.astro
@@ -1,21 +1,36 @@
 ---
 import type { getSidebar } from '../utils/navigation';
+import LanguageSelect from './LanguageSelect.astro';
 import SidebarSublist from './SidebarSublist.astro';
 
 interface Props {
   sidebar: ReturnType<typeof getSidebar>;
+  locale: string | undefined;
 }
 ---
 
-<nav aria-label="Main">
+<div class="sidebar">
   <SidebarSublist sublist={Astro.props.sidebar} />
-</nav>
+  <div class="mobile-preferences md:hidden">
+    <!-- TODO: implement theme switcher -->
+    <span>dark/light</span>
+    <LanguageSelect locale={Astro.props.locale} />
+  </div>
+</div>
 
 <style>
-  nav {
+  .sidebar {
     height: 100%;
-    border-inline-end: 1px solid var(--sb-color-black);
-    background-color: var(--sb-color-gray-6);
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .mobile-preferences {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid var(--sb-color-gray-6);
+    padding: 0.5rem 0;
   }
 </style>
